[Sync] Fix missing wait for initial sync to send crypto to proc

This avoid hitting a DCHECK that was introduced in
https://chromiumcodereview.appspot.com/2401083003 where we tried clean
up notifications to the model thread about encryption information.
By re-using the existing ApplyUpdates methods (and DCHECKs) we now
realize that we sometimes call ApplyUpdates before the initial sync is
completed. This is probably wrong and definitely, since the initial
sync will call ApplyUpdates and pass encryption information. Sending it
before that will just be confusing for the proc.

Bug: 789950
Change-Id: Ifc2b01efbc71145574f9106c67ce9aebfc8f6b99